updated alone among the stars bottom section again

--- a/aats/game.html
+++ b/aats/game.html
@@ -11,7 +11,7 @@
     <hr />
     <div>
     <p>Video walkthrough <a href="https://www.youtube.com/watch?v=j0UzxizcVtc">https://www.youtube.com/watch?v=j0UzxizcVtc</a></p>
-    <p>Game website <a href="https://noroadhome.itch.io/alone-among-the-stars"><https://noroadhome.itch.io/alone-among-the-stars</a></p>
+    <p>Game website <a href="https://noroadhome.itch.io/alone-among-the-stars">https://noroadhome.itch.io/alone-among-the-stars</a></p>
     <p>Just for fun and to allow someone to use this to play with. Run it from a browser, and it should work.</p>
     </div>
     <script src="aats.js"></script>
